--- a/_posts/2009-10-06-RSSCloud.textile
+++ b/_posts/2009-10-06-RSSCloud.textile
@@ -11,5 +11,5 @@ author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 
 Yet, "some publishers":http://en.blog.wordpress.com/2009/09/07/rss-in-the-clouds/ have made a different choice and since _it always eventually comes down to the customer's experience_, we had to implement RSSCloud. Superfeedr is now an "aggregator":http://rsscloud.org/walkthrough.html. As a user, if you give us a feed that is RSSCloud enabled, then, we will subscribe to the right _cloud_ and you should get updates from this feed in a few seconds as well (exactly like with PubSubHubbub).
 
-The awesome part of that news: since we use "PubSubHubbub as our API":http://superfeedr.com/hubbub (we're one of the few independent hubs), this means that if you use us, _you don't even have to care about RSSCloud_. "Once again":http://blog.superfeedr.com/gospel/something-stupid/, we do all the "hard" work for you :) *Just implement the PubSubHubbub subscriber part, and you'll get the RSSCloud feeds through that as well*.
+The awesome part of that news: since we use "PubSubHubbub as our API":http://push.superfeedr.com/ (we're one of the few independent hubs), this means that if you use us, _you don't even have to care about RSSCloud_. "Once again":http://blog.superfeedr.com/gospel/something-stupid/, we do all the "hard" work for you :) *Just implement the PubSubHubbub subscriber part, and you'll get the RSSCloud feeds through that as well*.
 
