--- a/_posts/2010-10-01-subscriber-toolbox.textile
+++ b/_posts/2010-10-01-subscriber-toolbox.textile
@@ -7,7 +7,7 @@ author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-Our XMPP console is great for very _initial debugging_ but doesn't fulfill a lot of our user's need after they subscribed to a few dozen feeds. Additionally, the subscribers who use "PubSubHubbub":http://superfeedr.com/hubbub cannot benefit from it and they usually have a hard time debugging their endpoints. As a consequence of this, we have decided to re-factor most of our Subscriber toolbox. Here is a small review of it.
+Our XMPP console is great for very _initial debugging_ but doesn't fulfill a lot of our user's need after they subscribed to a few dozen feeds. Additionally, the subscribers who use "PubSubHubbub":http://push.superfeedr.com/ cannot benefit from it and they usually have a hard time debugging their endpoints. As a consequence of this, we have decided to re-factor most of our Subscriber toolbox. Here is a small review of it.
 
 Like always, please remember *that all these tools actually use our API and only our API*, which means _you can certainly build similar or better tools on your own to fit your specific needs_. Check "our documentation":http://superfeedr.com/documentation.
 
