--- a/_posts/2009-06-18-pubsubhubbub.textile
+++ b/_posts/2009-06-18-pubsubhubbub.textile
@@ -14,4 +14,4 @@ This presentation should give you enough details about PubSubhubbub.
 
 What does that mean for you superfeedr users? It means that you can get the ATOM payload of the feeds we parsed pushed to your endpoint url. Check our "implementation notes":http://groups.google.com/group/superfeedr/web/pubsubhubbub to learn more.
 
-Ha, I almost forgot, you can find our hub there "http://superfeedr.com/hubbub":http://superfeedr.com/hubbub.
+Ha, I almost forgot, you can find our hub there "http://push.superfeedr.com/":http://push.superfeedr.com/.
