--- a/_posts/2010-01-20-publisher-callback-extension.textile
+++ b/_posts/2010-01-20-publisher-callback-extension.textile
@@ -7,7 +7,7 @@ author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
 ---
 
-Superfeedr now hosts "several hubs":http://superfeedr.com/hubbub. We had discussion with a lot of data publishers, including blog platforms, but also social network and regular "media" sites.
+Superfeedr now hosts "several hubs":http://push.superfeedr.com/. We had discussion with a lot of data publishers, including blog platforms, but also social network and regular "media" sites.
 
 All of the people with whom we talked were *excited by real-time feeds* and most of them see *PubSubHubbub* as a good way for them to rely less on polling and actively push their data toward subscribers. However, a lot of them _raised the concern that the protocol was a little too blind_ for them. They want to have a certain visibility on who (the callback urls) subscribed to what (the feed urls).
 
