--- a/_posts/2010-03-03-a-hub-for-twitter.textile
+++ b/_posts/2010-03-03-a-hub-for-twitter.textile
@@ -11,7 +11,7 @@ If you claim to be some kind of social app but don't use *PubSubHubbub*, I think
 
 On the other hand, if you're a *realtime feed standard* that is not used by "Twitter":http://twitter.com/, _you're also missing something_.
 
-Based on these simple facts, I think Twitter needs to have a "PubSubHubbub":http://superfeedr.com/hubbub hub. They recently announced that more and more apps are "getting their firehose":http://blog.twitter.com/2010/03/enabling-rush-of-innovation.html, this is great and shows us that *they want their data out* (hey, "Facebook":http://facebook.com/, did you hear that?). However, a few conversations with both "John":http://twitter.com/jkalucki and "Ryan":http://twitter.com/Rsarver showed me that they weren't so keen of doing so. *Sad*.
+Based on these simple facts, I think Twitter needs to have a "PubSubHubbub":http://push.superfeedr.com/ hub. They recently announced that more and more apps are "getting their firehose":http://blog.twitter.com/2010/03/enabling-rush-of-innovation.html, this is great and shows us that *they want their data out* (hey, "Facebook":http://facebook.com/, did you hear that?). However, a few conversations with both "John":http://twitter.com/jkalucki and "Ryan":http://twitter.com/Rsarver showed me that they weren't so keen of doing so. *Sad*.
 
 To prove them wrong, we started a "little poll 2 days ago":http://bit.ly/hub4twitter. The goal was to show Twitter that people would use this hub, and that, with it, the consumption of Twitter data will eventually grow over time.
 
@@ -53,7 +53,7 @@ A key concern when _implementing an API is the speed of adoption_. The streaming
 
 I *will send the detail results to both John and Ryan*, as well as the list of people who responded (in a BCC email), so anybody can start the conversation from there.
 
-Twitter will make the decision on whether they want to support that or not. It's obvious that if they do, I'd rather see that happen via a "Superfeedr hub":http://superfeedr.com/hubbub. However, I think it's still great for *PubSubHubbub* and the internets in general if Twitter decides to go down this route, but without us.
+Twitter will make the decision on whether they want to support that or not. It's obvious that if they do, I'd rather see that happen via a "Superfeedr hub":http://push.superfeedr.com/. However, I think it's still great for *PubSubHubbub* and the internets in general if Twitter decides to go down this route, but without us.
 
 Like always, I'm here to help anyway.
 
