--- a/_posts/2009-12-28-who-pubsubhubbub.textile
+++ b/_posts/2009-12-28-who-pubsubhubbub.textile
@@ -5,6 +5,7 @@ categories: [PubSubHubbub, Feeds, real-time, stats]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: /Feeds/PubSubHubbub/real-time/stats/who-pubsubhubbub/
 ---
 
 "PubSubHubbub":http://code.google.com/p/pubsubhubbub/ is now more or less _6 months old_. We have daily talks with people who wonder whether they should implement it in their feeds.
