--- a/_posts/2009-08-07-performance-monitoring-with-collectd.textile
+++ b/_posts/2009-08-07-performance-monitoring-with-collectd.textile
@@ -5,7 +5,7 @@ categories: [OSS, open-source, infrastructure, collectd]
 author_name: Astro
 author_uri: http://identi.ca/astro
 author_email_md5: 0120a25badc6b1e50f6890527dca7042
-alias: /OSS/collectd/infrastructure/open-source/performance-monitoring-with-collectd/
+alias: [/OSS/collectd/infrastructure/open-source/performance-monitoring-with-collectd/]
 ---
 
 One challenge we face when working in the Cloud is knowing *when to "scale up":http://blog.superfeedr.com/chef/configuration/deployment/infrastructure/scale-with-chef/.* That means we need some obvious figures telling us we need more resources.
