--- a/_posts/2009-11-03-post-mortem-02-11.textile
+++ b/_posts/2009-11-03-post-mortem-02-11.textile
@@ -5,6 +5,7 @@ categories: [post-mortem, MySQL, Memcache]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: /Memcache/MySQL/post-mortem/post-mortem-02-11
 ---
 
 Superfeedr went down yesterday evening. We immediately saw that it was a *database performance issue* (MySQL), given that the load on our _MySQL host was about 30+_. Since we have 2 MySQL hosts (Master - Master replication), we switched to the second one, hoping that was just a problem on the host. No luck.
