--- a/_posts/2009-11-09-posterous-supports-pubsubhubbub-with-superfeedr.textile
+++ b/_posts/2009-11-09-posterous-supports-pubsubhubbub-with-superfeedr.textile
@@ -5,6 +5,7 @@ categories: [PubSubHubbub, posterous, publisher]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: [/PubSubHubbub/posterous/publisher/posterous-supports-pubsubhubbub-with-superfeedr/]
 ---
 
 !{float:left; margin: 10px;}http://posterous.com/images/homepage2/posterous_logo1.png!
