--- a/_posts/2010-01-06-scaling-superfeedr.textile
+++ b/_posts/2010-01-06-scaling-superfeedr.textile
@@ -5,6 +5,7 @@ categories: [Superfeedr, lateness, scaling]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: /Superfeedr/lateness/scaling/scaling-superfeedr/
 ---
 
 I'd like to start this post by *wishing everybody a wonderful 2010 year, and a great 2nd decade of this millennium*.
