--- a/_posts/2010-01-25-why-realtime-matters-for-publishers.textile
+++ b/_posts/2010-01-25-why-realtime-matters-for-publishers.textile
@@ -5,6 +5,7 @@ categories: [realtime, publisher]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: /publisher/realtime/why-realtime-matters-for-publishers
 ---
 
 Several people wonder if *realtime feeds* is something they _need_, since they have regular RSS and Atom feeds.
