--- a/_posts/2010-03-29-unicorn.textile
+++ b/_posts/2010-03-29-unicorn.textile
@@ -5,6 +5,7 @@ categories: [webapp, pubsubhubbub, architecture, nnicorn]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: /architecture/nnicorn/pubsubhubbub/webapp/unicorn
 ---
 
 !{float:left; padding:10px}http://github.com/images/error/angry_unicorn.png!
