--- a/_posts/2009-12-12-tumblr-has-a-hub.textile
+++ b/_posts/2009-12-12-tumblr-has-a-hub.textile
@@ -5,6 +5,7 @@ categories: [Tumblr, pubsubhubbub, publisher]
 author_name: Julien
 author_uri: http://ouvre-boite.com
 author_email_md5: b30ce50678f0e934eaa6697425c59dd7
+alias: /Tumblr/publisher/pubsubhubbub/tumblr-has-a-hub/
 ---
 
 !{float:left; margin: 10px;}/images/tumblr.png!
