--- a/_posts/2015-04-01-batfeedr.markdown
+++ b/_posts/2015-04-01-batfeedr.markdown
@@ -11,3 +11,6 @@ Branding is the most important aspect of any tech company. After our redesign la
 
 After working very hard for weeks and weeks and we came up with a new name and logo. We hope you'll apprciate it.
 
+<strong>Update</strong>: of course, yesterday was April 1st :) For the sake of eternity, here's s screen capture of Batfeedr!
+
+![Inoreader](/images/batfeedr.png)
